[project]
name = "openmyid"
version = "0.1.0"
description = "Use myID (https://myid.gov.au) without a smartphone"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.3",
    "httpx>=0.28.1",
    "meatie>=0.1.23",
    "pydantic>=2.11.5",
    "pyjwt>=2.10.1",
    "rich-pixels>=3.0.1",
    "textual>=6.1.0",
    "textual-dev>=1.7.0",
]


[project.scripts]
openmyid = "openmyid:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
    "myid.py",
    "openmyid.py",
    "wizard.png",
    "uv.lock"
]

[tool.hatch.build.targets.wheel]
only-include = [
    "myid.py",
    "openmyid.py",
    "wizard.png"
]
